Bug 106461 - UI: Text fields in Form Properties dialog cover other widget (gtk2)
Summary: UI: Text fields in Form Properties dialog cover other widget (gtk2)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0 target:5.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-03-09 17:47 UTC by Hiunn-hué
Modified: 2017-03-27 13:18 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot_form_properties_dialog (144.84 KB, image/png)
2017-03-09 17:47 UTC, Hiunn-hué
Details
comparison Libreoffice 4.4 and LibreOffice 5.4 (112.74 KB, image/png)
2017-03-10 10:26 UTC, Xisco Faulí
Details
Screenshot, looks OK (115.31 KB, image/png)
2017-03-10 18:10 UTC, Khaled Hosny
Details
screenshot_5.3.0.3_gtk3 (72.25 KB, image/png)
2017-03-10 21:49 UTC, Hiunn-hué
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hiunn-hué 2017-03-09 17:47:22 UTC
Created attachment 131777 [details]
screenshot_form_properties_dialog

In the dialog windows of Form Properties/Form Controls, items are too close to each other, and the text fields cover other widget. 

Please see attachment.

Tested on ...

* Version: 5.3.0.3
Build ID: 1:5.3.0~rc3-0ubuntu1~xenial1.1
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2;
Locale: zh-TW (zh_TW.UTF-8); Calc: group

* Version: 5.4.0.0.alpha0+
Build ID: a5a6694128728c48c1a8482450a21ad49025c40c
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-03-07_02:52:26
Locale: zh-TW (zh_TW.UTF-8); Calc: group
Comment 1 Xisco Faulí 2017-03-10 10:26:21 UTC
Created attachment 131796 [details]
comparison Libreoffice 4.4 and LibreOffice 5.4

I can't reproduce the overlapping in 

Version: 5.4.0.0.alpha0+
Build ID: d3676ceeec55a41337ce5e6bc596f4f100d0638e
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

However, I do agree that before there was a gap between the textboxes and now it's gone ( see the comparison picture )
Comment 2 Xisco Faulí 2017-03-10 10:48:50 UTC
Regression introduced by:

author	Khaled Hosny <khaledhosny@eglug.org>	2016-11-09 13:22:43 (GMT)
committer	Khaled Hosny <khaledhosny@eglug.org>	2016-11-22 15:32:11 (GMT)
commit 34d7602954d4483b3bc9db700e7df2c15348947a (patch)
tree 8dcfb93fc29815fd89481a7840d64d6c187534db
parent c855aec445628f96d3d32cfde6efd4e51e4489c9 (diff)
tdf#55469 Consistent line spacing across platforms

Adding Cc: to Khaled Hosny
Comment 3 Khaled Hosny 2017-03-10 16:00:01 UTC
How do I access this dialog?
Comment 4 Hiunn-hué 2017-03-10 17:52:45 UTC
(In reply to Khaled Hosny from comment #3)
> How do I access this dialog?

My steps:
 1. Open Writer
 2. View --> Toolbars --> Form Controls
 3. Insert a "Check Box" or "Text Box" ... etc. via the toolbar
 4. Right-click on the Box
 5. Click "Control ..." or "Form ..."
Comment 5 Khaled Hosny 2017-03-10 18:10:12 UTC
Created attachment 131803 [details]
Screenshot, looks OK

Looks just fine here.
Comment 6 Xisco Faulí 2017-03-10 18:18:52 UTC
(In reply to Khaled Hosny from comment #5)
> Created attachment 131803 [details]
> Screenshot, looks OK
> 
> Looks just fine here.

oh, it seems different in gtk3 and gtk2. Could you try SAL_USE_VCLPLUGIN=gtk instdir/program/swriter ?
Comment 7 Khaled Hosny 2017-03-10 18:40:57 UTC
I can reproduce the overlaps with GTK2, but I don’t think we should be putting much effort into supporting GTK2, it is was past its time already.

Anyway, if someone know where is the code for this dialog (which looks horrible in general), I can try to find out what crazy things it is doing that lead to this bug. So far I reached to extensions/source/propctrlr, but I can make heads or tails of the convoluted mess there to find out where these text boxes are positioned.
Comment 8 Xisco Faulí 2017-03-10 18:45:10 UTC
(In reply to Khaled Hosny from comment #7)
> I can reproduce the overlaps with GTK2, but I don’t think we should be
> putting much effort into supporting GTK2, it is was past its time already.
> 
> Anyway, if someone know where is the code for this dialog (which looks
> horrible in general), I can try to find out what crazy things it is doing
> that lead to this bug. So far I reached to extensions/source/propctrlr, but
> I can make heads or tails of the convoluted mess there to find out where
> these text boxes are positioned.

I can't reproduce it in 'gen' neither.
Maybe Caolán can comment here
Comment 9 Hiunn-hué 2017-03-10 21:49:32 UTC
Created attachment 131806 [details]
screenshot_5.3.0.3_gtk3

I tried 5.3.0.3 with gtk3 (remove libreoffice-gtk2 and install libreoffice-gtk3 in repo), and I still see this issue.

--
OS: elementary OS 0.4 Loki (64-bit) based on: Ubuntu 16.04.2 LTS
DE: Pantheon
Themes: elementary and Arc
Comment 10 Commit Notification 2017-03-23 16:08:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5013abeb191cdc6f8375f107a4d30abd802547d2

Resolves: tdf#106461 use a row height of max of edit and listbox height

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Caolán McNamara 2017-03-23 16:10:08 UTC
backport in gerrit for 5-3 review
Comment 12 Commit Notification 2017-03-27 13:18:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=910582360d2a2f0455841b2cd0c3cc2c7ed08344&h=libreoffice-5-3

Resolves: tdf#106461 use a row height of max of edit and listbox height

It will be available in 5.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.