Resolves: tdf#106461 use a row height of max of edit and listbox height

not just take the listbox because edits can be taller and result in
overlaps

Change-Id: I6067b384484d933727220febda723bc9e8c5e90b